# lsms-agent

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  LSMS Automation - Architecture Plan.md  Makefile  README.md  pyproject.toml
crosswalks/: README.md
docs/: index.html
ingest/: _common.py  build_catalog.py  build_docs_index.py  convert_to_parquet.py
scripts/: reorganize.py
server/: agent.py  app.py  audit.py  config.py  crosswalks.py  data_policy.py  rate_limit.py  sandbox.py  sandbox_worker.py  tools.py
