[project]
name = "lsms-agent"
version = "0.1.0"
description = "Natural-language analysis agent over LSMS-ISA survey data (8 African countries)."
requires-python = ">=3.11"
dependencies = [
    "anthropic==0.102.0",
    "chainlit==2.11.0",
    "pandas==3.0.3",
    "pyarrow==24.0.0",
    "pyreadstat==1.3.4",
    "python-dotenv==1.2.2",
    "ipython==9.13.0",
    "matplotlib==3.10.9",
    "seaborn==0.13.2",
    "numpy==2.4.4",
    "scipy==1.17.1",
    "statsmodels==0.14.6",
    "linearmodels==7.0",
    "pypdf==6.11.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ingest", "server"]
